<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="pass">Pass</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_login_facebook">Login with Facebook</string>
    <string name="button_login_twitter">Login with Twitter</string>

    <!-- texts -->
    <string name="register_prompt">Register new user</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>
    <string name="offline_link">Offline</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>
    <string name="description">Description:</string>
    <string name="hint_title">Enter title</string>
    <string name="title">Title:</string>
    <string name="hint_description">Enter description</string>
    <string name="date">Date:</string>
    <string name="hint_date">Enter date</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_title">Please, enter title</string>
    <string name="enter_date">Please, enter date</string>
    <string name="edit">Edit</string>
    <string name="note_loading_error">Can\'t load this note</string>
    <string name="note_creation_error">Can\'t create this note</string>
    <string name="note_update_error">Can\'t update this note</string>
    <string name="note_list_loading_error">Can\'t load Notes</string>
    <string name="note_delete_error">Can\'t delete Note</string>
    <string name="search">Search</string>
    <string name="enter_offline">or you can enter Offline</string>
</resources>
